fixed issue with scrollbar during animation transition

--- a/app/src/stylesheets/sass/App.scss
+++ b/app/src/stylesheets/sass/App.scss
@@ -8,10 +8,6 @@ body {
   padding: 0;
   color: $text-color;
   background-color: $main-bg-color;
-
-  p {
-    margin: 0;
-  }
 }
 
 #quote-div {
