--- a/app/src/stylesheets/sass/partials/_animations.scss
+++ b/app/src/stylesheets/sass/partials/_animations.scss
@@ -7,7 +7,7 @@
 
 .animate-right-appear.animate-right-appear-active {
   @include animate(right, 0, 1);
-  transition: all 600ms linear;
+  transition: all 1000ms linear;
 }
 
 .animate-right-enter {
@@ -16,7 +16,7 @@
 
 .animate-right-enter.animate-right-enter-active {
   @include animate(right, 0, 1);
-  transition: all 600ms linear 300ms;
+  transition: all 1000ms linear 300ms;
 }
 
 .animate-right-exit {
@@ -35,7 +35,7 @@
 
 .animate-left-appear.animate-left-appear-active {
   @include animate(left, -15%, 1);
-  transition: all 800ms linear;
+  transition: all 1000ms linear;
 }
 
 .animate-left-enter {
@@ -44,7 +44,7 @@
 
 .animate-left-enter.animate-left-enter-active {
   @include animate(left, -15%, 1);
-  transition: all 800ms linear 300ms;
+  transition: all 1000ms linear 300ms;
 }
 
 .animate-left-exit {
@@ -52,6 +52,6 @@
 }
 
 .animate-left-exit.animate-left-exit-active {
-  @include animate(left, -100%, 0);
-  transition: all 300ms linear;
+ @include animate(left, -100%, 0);
+ transition: all 300ms linear;
 }
